# g-p-source

./: Cargo.toml  README.md
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
copilot-plugin/: .mcp.json  plugin.json
copilot-plugin/agents/: gps.agent.md
copilot-plugin/scripts/: gps-discover.ps1  gps-discover.sh  gps-start.ps1  gps-start.sh  gps-status.ps1  gps-status.sh
copilot-plugin/skills/gps-bundle/: SKILL.md
copilot-plugin/skills/gps-changes/: SKILL.md
copilot-plugin/skills/gps-hot/: SKILL.md
copilot-plugin/skills/gps-locate/: SKILL.md
copilot-plugin/skills/gps-neighborhood/: SKILL.md
copilot-plugin/skills/gps-read/: SKILL.md
copilot-plugin/skills/gps-search/: SKILL.md
copilot-plugin/skills/gps-session-init/: SKILL.md
copilot-plugin/skills/gps-summary/: SKILL.md
copilot-plugin/skills/gps-tree/: SKILL.md
copilot-plugin/skills/gps-word/: SKILL.md
openspec/changes/gps-indexing-engine/: design.md  proposal.md  tasks.md
scripts/: bump-minor.sh
src/: config.rs  discovery.rs  lib.rs  main.rs  sensitive.rs
src/api/: auth.rs  methods.rs  mod.rs  server.rs
src/index/: mod.rs  sled_store.rs  store.rs  types.rs
src/mcp/: mod.rs  stdio_server.rs
src/parser/: language_registry.rs  mod.rs  queries.rs  source_parser.rs  symbol.rs  symbol_diff.rs
src/pipeline/: dispatcher.rs  initial_crawl.rs  mod.rs
src/watcher/: fs_watcher.rs  mod.rs
tests/: benchmarks.rs  discovery_tests.rs  new_features_tests.rs  parser_tests.rs  pipeline_integration.rs  store_tests.rs
(+5 files in other folders)
