[package]
name = "g-p-source"
version = "0.2.0"
edition = "2024"
description = "Incremental code indexing engine with structural parsing and JSON-RPC API"

[[bin]]
name = "gpsource"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-full = "0.3"
tree-sitter = "0.24"
sled = "0.34"
jsonrpsee = { version = "0.24", features = ["server", "http-client", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["auth"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
walkdir = "2"
hyper = { version = "1", features = ["full"] }
http = "1"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-c-sharp = "0.23"
anyhow = "1"
dirs = "5"
streaming-iterator = "0.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
